[gd_scene load_steps=12 format=3 uid="uid://ti0y78neg1q2"]

[ext_resource type="PackedScene" uid="uid://bfpslxlg3v5sg" path="res://src/Entities/player.tscn" id="1"]
[ext_resource type="Script" path="res://src/UI/stopwatch_label.gd" id="6_yxojd"]
[ext_resource type="Script" path="res://src/UI/stopwatch.gd" id="7_a7vhx"]
[ext_resource type="Script" path="res://src/Objects/lap_label.gd" id="8_tixbp"]
[ext_resource type="Script" path="res://src/UI/pause_menu.gd" id="9_4vi2q"]
[ext_resource type="PackedScene" uid="uid://bg36u5m2ohqlk" path="res://src/UI/QuitButton.tscn" id="9_nqkse"]
[ext_resource type="Script" path="res://src/UI/resume_button.gd" id="10_eajmv"]
[ext_resource type="Script" path="res://src/UI/menu_button.gd" id="10_ghn5s"]
[ext_resource type="Script" path="res://src/UI/race_over_menu.gd" id="12_iwybs"]
[ext_resource type="Script" path="res://src/UI/restart_button.gd" id="13_5aufr"]
[ext_resource type="AudioStream" uid="uid://c4pqyjcuya0np" path="res://Assets/Sound/n-Dimensions (Main Theme - Retro Ver.mp3" id="15_2nnyx"]

[node name="Level" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(13, 55)
collision_mask = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StopwatchLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 18.0
offset_top = 13.0
offset_right = 218.0
offset_bottom = 27.0
script = ExtResource("6_yxojd")

[node name="Stopwatch" type="Node" parent="CanvasLayer/UI/StopwatchLabel"]
script = ExtResource("7_a7vhx")

[node name="LapLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_top = 13.0
offset_right = -19.0
offset_bottom = 27.0
script = ExtResource("8_tixbp")

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_4vi2q")

[node name="PauseTitle" type="Label" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_top = 122.0
offset_right = 28.5
offset_bottom = 148.0
grow_horizontal = 2
text = "Paused"

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -67.0
offset_right = 35.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"
script = ExtResource("10_eajmv")

[node name="QuitButton" parent="CanvasLayer/PauseMenu" instance=ExtResource("9_nqkse")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 30.0
offset_right = 48.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="Button" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -15.5
offset_right = 26.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Menu"
script = ExtResource("10_ghn5s")

[node name="RaceOverMenu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_iwybs")

[node name="RaceOverTitleLabel" type="Label" parent="CanvasLayer/RaceOverMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_top = 122.0
offset_right = 28.5
offset_bottom = 148.0
grow_horizontal = 2
text = "Race Over!"

[node name="YourTimeLabel" type="Label" parent="CanvasLayer/RaceOverMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_top = 162.0
offset_right = 41.5
offset_bottom = 188.0
grow_horizontal = 2
text = "Score: "

[node name="BestTimeLabel" type="Label" parent="CanvasLayer/RaceOverMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_top = 196.0
offset_right = 41.5
offset_bottom = 222.0
grow_horizontal = 2
text = "High Score:"

[node name="RestartButton" type="Button" parent="CanvasLayer/RaceOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -66.0
offset_right = 32.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"
script = ExtResource("13_5aufr")

[node name="QuitButton" parent="CanvasLayer/RaceOverMenu" instance=ExtResource("9_nqkse")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 30.0
offset_right = 48.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="Button" parent="CanvasLayer/RaceOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -15.5
offset_right = 26.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Menu"
script = ExtResource("10_ghn5s")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_2nnyx")
volume_db = -15.0

[connection signal="race_data_times_updated" from="CanvasLayer/UI/StopwatchLabel/Stopwatch" to="CanvasLayer/RaceOverMenu" method="_on_stopwatch_race_data_times_updated"]
[connection signal="button_up" from="CanvasLayer/PauseMenu/ResumeButton" to="CanvasLayer/PauseMenu/ResumeButton" method="_on_button_up"]
[connection signal="button_up" from="CanvasLayer/PauseMenu/MenuButton" to="CanvasLayer/PauseMenu/MenuButton" method="_on_button_up"]
[connection signal="button_up" from="CanvasLayer/RaceOverMenu/RestartButton" to="CanvasLayer/RaceOverMenu/RestartButton" method="_on_button_up"]
[connection signal="button_up" from="CanvasLayer/RaceOverMenu/MenuButton" to="CanvasLayer/RaceOverMenu/MenuButton" method="_on_button_up"]
